assets/styles.css
/* ... */
.histogram-header {
    margin-top: -1.25em;
    margin-bottom: .25em;
    font-weight: 500;
}

.histogram-header span {
    color: var(--color-primary);
    margin: .5em;
    font-size: .8em;
}

.tooltip .dim:nth-child(4n+1),
.histogram-header span:nth-child(4n+1) {
    color: var(--color-primary-shade);
}

.tooltip .dim:nth-child(4n+2),
.histogram-header span:nth-child(4n+2) {
    color: var(--color-secondary);
}

.tooltip .dim:nth-child(4n+3),
.histogram-header span:nth-child(4n+3) {
    color: var(--color-tertiary);
}

.group .bar:nth-child(4n+1) {
    background-color: var(--color-primary-shade);
}

.group .bar:nth-child(4n+2) {
    background-color: var(--color-secondary);
}

.group .bar:nth-child(4n+3) {
    background-color: var(--color-tertiary);
}


/* Point graph */

.point-graph {
    --graph-height: 500px;
    --graph-height-inc: calc(var(--graph-height) + 10px);
}

.point-graph .values:hover+.label a {
    color: var(--color-tertiary);
}

.point-graph input:checked+label,
.phylogenetictree input:checked+label {
    border-color: var(--color-primary);
    border-radius: .2rem;
}

.point-graph label::before,
.phylogenetictree .legend::before {
    content: "";
    top: 0;
    left: 0;
    width: 5px;
    height: 5px;
    border-radius: 50%;
    display: inline-block;
    background: var(--color);
    border: 2px solid var(--color);
    margin-right: .5em;
    margin-left: .5em;
}

.point-graph label::after,
.phylogenetictree label::after {
    content: unset !important;
}

.point-graph .plot {
    display: flex;
    gap: 8px;
    flex-basis: 100%;
}

.point-graph .group {
    display: grid;
    grid-template-rows: var(--graph-height) 100px;
    grid-auto-flow: column;
    position: relative;
    padding-left: 5px;
    padding-top: 5px;
    border-bottom: none;
}

.point-graph .group::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.25;
    z-index: -1;
    background: var(--color-primary);
}

.point-graph .values {
    position: relative;
}

.point-graph .point {
    width: 5px;
    height: 5px;
    border-radius: 50%;
    display: none;
    background: var(--color);
    border: 2px solid var(--color);
    position: absolute;
    left: 0;
    top: calc((1 - var(--x)) * var(--graph-height));
}

.point-graph .point:nth-child(3n+1),
.point-graph label:nth-of-type(3n+1) {
    --color: var(--color-primary);
}

.point-graph .point:nth-child(3n+2),
.point-graph label:nth-of-type(3n+2) {
    --color: var(--color-secondary);
}

.point-graph .point:nth-child(3n),
.point-graph label:nth-of-type(3n) {
    --color: var(--color-tertiary);
}

.point-graph .point:nth-child(6n+4),
.point-graph label:nth-of-type(6n+4)::before,
.point-graph .point:nth-child(6n+5),
.point-graph label:nth-of-type(6n+5)::before,
.point-graph .point:nth-child(6n),
.point-graph label:nth-of-type(6n)::before {
    background: none;
}

.point-graph .showdata-0:checked~* .point:nth-child(1) {
    display: block;
}

.point-graph .showdata-1:checked~* .point:nth-child(2) {
    display: block;
}

.point-graph .showdata-2:checked~* .point:nth-child(3) {
    display: block;
}

.point-graph .showdata-3:checked~* .point:nth-child(4) {
    display: block;
}

.point-graph .showdata-4:checked~* .point:nth-child(5) {
    display: block;
}

.point-graph .showdata-5:checked~* .point:nth-child(6) {
    display: block;
}

.point-graph .label {
    position: relative;
    display: inline-block;
}

.point-graph .label>* {
    overflow: hidden;
    height: 10px;
    width: 100px;
    position: absolute;
    top: 10px;
    left: 6px;
    transform-origin: left;
    font-size: 10px;
    transform: rotate(90deg);
    color: var(--color-dark);
}

.point-graph .group-label {
    position: absolute;
    right: -15px;
    top: 30px;
    color: var(--color-background);
    font-weight: 500;
    font-size: 1.5em;
    overflow: hidden;
    transform: rotate(90deg);
}

.point-graph .yaxis {
    display: flex;
    flex-direction: column;
    height: var(--graph-height-inc);
    justify-content: space-between;
    align-items: flex-end;
    border-right: 2px solid var(--color-dark);
    padding-right: 2px;
    position: relative;
}

.point-graph .yaxis::after {
    content: "";
    display: block;
    position: absolute;
    height: 2px;
    width: 100vw;
    left: 100%;
    background-color: var(--color-dark);
    top: var(--graph-height-inc);
    z-index: -10;
}

.point-graph .yaxis .title {
    writing-mode: vertical-lr;
    align-self: center;
    transform: rotate(180deg);
}

.point-graph .yaxis .max,
.point-graph .yaxis .min {
    font-size: 10px;
}


/* Special rules for depth of coverage plots */

.docplot {
    flex-basis: 100%;
}

.docplot .histogram {
    grid-template-rows: 50px 1fr;
    gap: 0;
    grid-template-columns: minmax(0px, max-content) repeat(auto-fit, minmax(0px, 1fr));
}

.docplot .histogram .bar span {
    position: absolute;
    color: var(--color-dark)
}

.docplot .histogram .label {
    overflow-x: visible;
}


/* Alignment details index menu */

.alignment-details {
    display: none;
    position: fixed;
    bottom: 0;
    right: 0;
    background: var(--color-background);
    border: 2px solid var(--color-primary);
    border-bottom: none;
    border-right: none;
    padding: 1em;
    padding-top: 0;
}

.alignment-details.active {
    display: block;
}

.alignment-details h4 {
    padding: 1em;
    margin: 0;
}

.alignment-details td {
    border: none;
}

.alignment-details .histogram {
    grid-template-rows: 1ch 1fr;
    grid-template-columns: none;
}

.alignment-details .histogram .label {
    font-size: .7em;
}

.alignment-details .histogram .yaxis,
.alignment-details .histogram .empty {
    display: none;
}

.sequence-match-graphic {
    display: flex;
}

.sequence-match-graphic>* {
    padding: 1px;
    height: 1ch
}

.sequence-match-graphic .match {
    background-color: var(--color-primary);
}
/* ... */

